--- a/app/src/main/res/layout/activity_review_list.xml
+++ b/app/src/main/res/layout/activity_review_list.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".presentation.main.MainActivity">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/layout_toolbar_main" />
+    <include layout="@layout/layout_toolbar" />
 
     <com.lianda.movies.utils.custom.CustomMultiStateView
-        android:id="@+id/msvMovie"
+        android:id="@+id/msvReview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:emptyView="@layout/layout_dialog"
@@ -22,13 +21,13 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvMovies"
+            android:id="@+id/rvReview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
             android:padding="@dimen/dimen_8dp"
             tools:itemCount="3"
-            tools:listitem="@layout/item_movie" />
+            tools:listitem="@layout/item_review" />
 
     </com.lianda.movies.utils.custom.CustomMultiStateView>
 
