--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -22,6 +22,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:textSize="@dimen/text_size_10sp"
+        android:padding="@dimen/dimen_24dp"
+        android:ellipsize="end"
+        android:background="@drawable/bg_rectangle_primary_radius_8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvName"
