--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/ic_error"
         app:layout_constraintBottom_toTopOf="@+id/tvTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
