delete unused code

--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -30,8 +30,8 @@
 
                 <ImageView
                     android:id="@+id/imgMovie"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_width="@dimen/dimen_0dp"
+                    android:layout_height="@dimen/dimen_0dp"
                     android:layout_alignParentEnd="true"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
@@ -56,8 +56,8 @@
                     style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="@dimen/dimen_8dp"
+                    android:layout_marginEnd="@dimen/dimen_16dp"
                     android:numStars="5"
                     android:progress="5"
                     android:progressTint="@color/colorYellow"
@@ -70,8 +70,8 @@
                     style="@style/MovieTextView.SubHeader.Bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="@dimen/dimen_8dp"
+                    android:layout_marginEnd="@dimen/dimen_16dp"
                     android:gravity="center"
                     android:text="@string/sample_vote"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -80,11 +80,11 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvTitle"
                     style="@style/MovieTextView.Header.Bold"
-                    android:layout_width="0dp"
+                    android:layout_width="@dimen/dimen_0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="@dimen/dimen_16dp"
+                    android:layout_marginTop="@dimen/dimen_8dp"
+                    android:layout_marginEnd="@dimen/dimen_8dp"
                     app:layout_constraintEnd_toStartOf="@+id/ratMovie"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/imgMovie"
@@ -93,10 +93,10 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvDate"
                     style="@style/MovieTextView.Grey"
-                    android:layout_width="0dp"
+                    android:layout_width="@dimen/dimen_0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="@dimen/dimen_8dp"
+                    android:layout_marginBottom="@dimen/dimen_8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/ratMovie"
                     app:layout_constraintStart_toStartOf="@+id/tvTitle"
@@ -161,7 +161,7 @@
                         android:id="@+id/tvLabelOriginalLanguage"
                         style="@style/MovieTextView.Medium"
                         android:layout_marginStart="@dimen/dimen_16dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="@dimen/dimen_8dp"
                         android:text="@string/label_original_language"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -347,6 +347,7 @@
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvLabelReview"
+                    android:layout_width="0dp"
                     style="@style/MovieTextView.SubHeader.Medium"
                     android:text="@string/label_review"
                     android:visibility="visible"
