--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -8,7 +8,7 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvName"
         style="@style/MovieTextView.Primary.SemiBold"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/dimen_16dp"
         android:layout_marginTop="@dimen/dimen_8dp"
         android:text="@string/sample_movie_name"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,9 +18,9 @@
         android:id="@+id/tvComment"
         style="@style/MovieTextView.Medium"
         android:layout_width="0dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/dimen_16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/dimen_16dp"
         android:textSize="@dimen/text_size_10sp"
         android:padding="@dimen/dimen_24dp"
         android:ellipsize="end"
@@ -33,7 +33,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_2dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/dimen_16dp"
         android:background="@color/colorWhiteOne"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
