--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialogContainer"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="@dimen/dimen_16dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="@dimen/dimen_16dp">
 
     <ImageView
         android:id="@+id/imgIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="@dimen/dimen_16dp"
         android:src="@drawable/ic_error"
         app:layout_constraintBottom_toTopOf="@+id/tvTitle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,12 +20,12 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
+        style="@style/MovieTextView.SubHeader.Bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/MovieTextView.SubHeader.Bold"
-        android:textSize="@dimen/text_size_18sp"
-        android:textAlignment="center"
         android:gravity="center"
+        android:textAlignment="center"
+        android:textSize="@dimen/text_size_18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +36,9 @@
         style="@style/MovieTextView.Grey"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/dimen_16dp"
+        android:layout_marginTop="@dimen/dimen_16dp"
+        android:layout_marginEnd="@dimen/dimen_16dp"
         android:gravity="center"
         android:textAlignment="center"
         android:textSize="@dimen/text_size_14sp"
@@ -51,9 +50,9 @@
         android:id="@+id/btnAction"
         style="@style/MovieButton"
         android:layout_width="match_parent"
-        android:layout_marginTop="16dp"
-        android:paddingStart="35dp"
-        android:paddingEnd="35dp"
+        android:layout_marginTop="@dimen/dimen_16dp"
+        android:paddingStart="@dimen/dimen_35dp"
+        android:paddingEnd="@dimen/dimen_35dp"
         android:textAllCaps="false"
         android:textSize="@dimen/text_size_14sp"
         android:visibility="gone"
