--- a/app/src/main/res/layout/item_review_loading.xml
+++ b/app/src/main/res/layout/item_review_loading.xml
@@ -11,10 +11,10 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvName"
             style="@style/MovieTextView.Primary.SemiBold"
-            android:layout_width="0dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="@dimen/dimen_0dp"
+            android:layout_marginStart="@dimen/dimen_16dp"
             android:layout_marginTop="@dimen/dimen_8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/dimen_16dp"
             android:background="@color/colorGrey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -23,18 +23,18 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvComment"
             style="@style/MovieTextView.Medium"
-            android:layout_width="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="@dimen/dimen_0dp"
+            android:layout_marginStart="@dimen/dimen_16dp"
+            android:layout_marginTop="@dimen/dimen_8dp"
+            android:layout_marginEnd="@dimen/dimen_16dp"
             android:layout_marginBottom="@dimen/dimen_8dp"
             android:background="@drawable/bg_rectangle_primary_radius_8"
             android:padding="@dimen/dimen_24dp"
             android:textSize="@dimen/text_size_10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvName"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/tvName" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
