--- a/app/src/main/res/layout/activity_review_list.xml
+++ b/app/src/main/res/layout/activity_review_list.xml
@@ -1,35 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <include layout="@layout/layout_toolbar" />
+    <data>
+        <variable
+            name="adapter"
+            type="com.lianda.movies.presentation.adapter.ReviewAdapter" />
+    </data>
 
-    <com.lianda.movies.utils.custom.CustomMultiStateView
-        android:id="@+id/msvReview"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_0dp"
-        app:emptyView="@layout/layout_dialog"
-        app:errorView="@layout/layout_dialog"
-        app:loadingView="@layout/layout_loading"
-        app:viewState="loading"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvReview"
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/layout_toolbar" />
+
+        <com.lianda.movies.utils.custom.CustomMultiStateView
+            android:id="@+id/msvReview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:padding="@dimen/dimen_8dp"
-            tools:itemCount="3"
-            tools:listitem="@layout/item_review" />
+            android:layout_height="@dimen/dimen_0dp"
+            app:emptyView="@layout/layout_dialog"
+            app:errorView="@layout/layout_dialog"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:loadingView="@layout/layout_loading"
+            app:viewState="loading">
 
-    </com.lianda.movies.utils.custom.CustomMultiStateView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvReview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:padding="@dimen/dimen_8dp"
+                app:setAdapter="@{adapter}"
+                tools:itemCount="3"
+                tools:listitem="@layout/item_review" />
 
+        </com.lianda.movies.utils.custom.CustomMultiStateView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
